# backend_webservice

./: .env.template  .gitignore  .gitmodules  Cargo.toml  Dockerfile  Rocket.toml  auth.key  devel.Dockerfile  docker-compose-prod.yaml  docker-compose.yaml
.github/workflows/: docker-image.yml  test.yml
entity/: Cargo.toml
entity/src/: category.rs  lib.rs  picture.rs  prelude.rs  product.rs  product_audit.rs  product_picture.rs  user.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20230107_225831_products.rs  m20230108_020136_pictures.rs  m20230108_031029_product_audit.rs  m20230109_234237_category.rs
migrations/2023-01-02-013620_create_users/: down.sql  up.sql
src/: catchers.rs  cors.rs  db.rs  logger.rs  main.rs  redis.rs  schema.rs  statsd.rs
src/controllers/: auth_controller.rs  file_controller.rs  mod.rs  product_controller.rs  user_controller.rs
src/controllers/user_controller/: test.rs
src/dtos/: auth.rs  product.rs
src/guards/: rate_limit.rs
src/models/: mod.rs  product.rs  role.rs  user.rs
src/services/: auth_service.rs  file_service.rs  mod.rs  product_service.rs  user_service.rs
src/services/auth_service/: test.rs
src/services/product_service/: test.rs
src/services/user_service/: test.rs
tekxchange-entities/: Cargo.toml
tekxchange-entities/src/: category.rs  file.rs  lib.rs  prelude.rs  product.rs  product_category.rs  product_picture.rs  refresh_token.rs  user.rs
tekxchange-migrations/: Cargo.toml
tekxchange-migrations/src/: lib.rs  m20220101_000001_create_table.rs  m20230107_225831_products.rs  m20230108_020136_pictures.rs  m20230108_031029_product_audit.rs  m20230109_234237_category.rs  m20230118_011838_file.rs  m20230521_213320_refresh.rs  utils.rs
