[package]
name = "rust_tekxchange_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
rust-argon2 = "1.0.0"
chrono = {version = "0.4.23", features = ["serde"]}
dotenvy = "0.15.6"
rocket = {version = "0.5.0-rc.2", features = ["json"]}
sea-orm = { version = "0.10.6", features = ["sqlx-postgres", "runtime-tokio-native-tls"] }
serde = {version = "1.0.152", features = ["derive"]}
serde_json = "1.0.91"
thiserror = "1.0.38"
entity = { path = "entity" }
migration = { path = "migration" }
jwt = { version = "0.16.0" }
hmac = "0.12.1"
sha2 = "0.10.6"
rand = "0.8.5"
