[package]
name = "rust_tekxchange_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1"
rust-argon2 = "^1"
chrono = {version = "^0", features = ["serde"]}
dotenvy = "^0"
rocket = {version = "^0.5.0-rc.2", features = ["json", "secrets"]}
sea-orm = { version = "0.11.1", features = ["sqlx-postgres", "runtime-tokio-native-tls"] }
serde = {version = "^1", features = ["derive"]}
serde_json = "^1"
thiserror = "^1"
entity = { path = "tekxchange-entities" }
migration = { path = "tekxchange-migrations" }
jwt = { version = "^0" }
hmac = "^0"
sha2 = "^0"
rand = "^0"
reqwest = {version = "^0", features = ["json"]}

[dev-dependencies]
tokio = {version = "^1", features = ["macros"]}
