[package]
name = "rust_tekxchange_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "^1", features = ["backtrace"] }
chrono = { version = "^0", features = ["serde"] }
dotenvy = "^0"
rocket = { version = "^0.5.0-rc.3", features = ["json"] }
sea-orm = { version = "0.12.2", features = [
    "sqlx-postgres",
    "runtime-tokio-native-tls",
] }
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
thiserror = "^1"
entity = { path = "tekxchange-entities" }
migration = { path = "tekxchange-migrations" }
argon2 = "0.5.0"
jwt-simple = { version = "0.11.4" }
reqwest = { version = "^0", features = ["json"] }
lazy_static = "^1"
regex = "^1"
cadence = { version = "0.29.0" }
redis = { version = "0.23.0", features = ["tokio-comp"] }
rust_decimal = { version = "1.29.1", features = ["serde-float"] }
uuid = { version = "1.3.3", features = ["v4"] }
mockall = { version = "0.11.4" }
geolocation_utils = { version = "0.2.2", features = ["serde"] }
tracing-loki = { version = "0.2.4" }
tracing = { version = "0.1.37" }
tracing-subscriber = { version = "0.3.17" }

[dev-dependencies]
tokio = { version = "1.28.2", features = ["full"] }
sea-orm = { version = "0.12.2", features = [
    "sqlx-sqlite",
    "runtime-tokio-native-tls",
] }
migration = { path = "tekxchange-migrations", features = ["sqlite"] }
